5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3999/executions/1671_1100.log
== TEST (2019-04-24 00:11:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("Insira a Cedula: "))
print("Entrada",x)
if(x!=100)and(x!=50)and(x!=20)and(x!=10)and(x!=5)and(x!=2):
	animal="invalido"
elif(x==100):
	animal="Garoupa"
elif(x==50):
	y="Onca-pintada"
elif(x==20):
	y="Mico-leao-dourado"
elif(x==10):
	y="Arara"
elif(x==5):
	y="Garca"
elif(x==2):
	y="Tartaruga"
print("Animal",y)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print("Animal",y)	
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 00:11:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("Insira a Cedula: "))
print("Entrada:",x)
if(x!=100)and(x!=50)and(x!=20)and(x!=10)and(x!=5)and(x!=2):
	animal="invalido"
elif(x==100):
	animal="Garoupa"
elif(x==50):
	y="Onca-pintada"
elif(x==20):
	y="Mico-leao-dourado"
elif(x==10):
	y="Arara"
elif(x==5):
	y="Garca"
elif(x==2):
	y="Tartaruga"
print("Animal",y)	

-- EXECUTION TIME:
0.21998
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1100/main.py", line 20, in <module>
    print("Animal",y)	
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 00:11:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("Insira a Cedula: "))
print("Entrada:",x)
if(x!=100)and(x!=50)and(x!=20)and(x!=10)and(x!=5)and(x!=2):
	animal="invalido"
elif(x==100):
	animal="Garoupa"
elif(x==50):
	y="Onca-pintada"
elif(x==20):
	y="Mico-leao-dourado"
elif(x==10):
	y="Arara"
elif(x==5):
	y="Garca"
elif(x==2):
	y="Tartaruga"
print("Animal",y)	

-- EXECUTION TIME:
0.121867
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1100/main.py", line 20, in <module>
    print("Animal",y)	
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:12:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("Insira a Cedula: "))
print("Entrada:",x)
if(x!=100)and(x!=50)and(x!=20)and(x!=10)and(x!=5)and(x!=2):
	animal="invalido"
elif(x==100):
	animal="Garoupa"
elif(x==50):
	y="Onca-pintada"
elif(x==20):
	y="Mico-leao-dourado"
elif(x==10):
	y="Arara"
elif(x==5):
	y="Garca"
elif(x==2):
	y="Tartaruga"
print("Animal:",y)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print("Animal:",y)	
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 00:12:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("Insira a Cedula: "))
print("Entrada:",x)
if(x!=100)and(x!=50)and(x!=20)and(x!=10)and(x!=5)and(x!=2):
	animal="invalido"
elif(x==100):
	animal="Garoupa"
elif(x==50):
	y="Onca-pintada"
elif(x==20):
	y="Mico-leao-dourado"
elif(x==10):
	y="Arara"
elif(x==5):
	y="Garca"
elif(x==2):
	y="Tartaruga"
print("Animal:",y)	

-- EXECUTION TIME:
0.184098
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1100/main.py", line 20, in <module>
    print("Animal:",y)	
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 00:12:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("Insira a Cedula: "))
print("Entrada:",x)
if(x!=100)and(x!=50)and(x!=20)and(x!=10)and(x!=5)and(x!=2):
	animal="invalido"
elif(x==100):
	animal="Garoupa"
elif(x==50):
	y="Onca-pintada"
elif(x==20):
	y="Mico-leao-dourado"
elif(x==10):
	y="Arara"
elif(x==5):
	y="Garca"
elif(x==2):
	y="Tartaruga"
print("Animal:",y)	

-- EXECUTION TIME:
0.18305
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1100/main.py", line 20, in <module>
    print("Animal:",y)	
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 00:13:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("Insira a Cedula: "))
print("Entrada:",x)
if(x!=100)and(x!=50)and(x!=20)and(x!=10)and(x!=5)and(x!=2):
	animal="Invalido"
elif(x==100):
	animal="Garoupa"
elif(x==50):
	y="Onca-pintada"
elif(x==20):
	y="Mico-leao-dourado"
elif(x==10):
	y="Arara"
elif(x==5):
	y="Garca"
elif(x==2):
	y="Tartaruga"
print("Animal:",y)	

-- EXECUTION TIME:
0.241588
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1100/main.py", line 20, in <module>
    print("Animal:",y)	
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:13:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("Insira a Cedula: "))
print("Entrada:",x)
if(x!=100)and(x!=50)and(x!=20)and(x!=10)and(x!=5)and(x!=2):
	animal="Invalido"
elif(x==100):
	animal="Garoupa"
elif(x==50):
	y="Onca-pintada"
elif(x==20):
	y="Mico-leao-dourado"
elif(x==10):
	y="Arara"
elif(x==5):
	y="Garca"
elif(x==2):
	y="Tartaruga"
print("Animal:",y)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print("Animal:",y)	
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 00:14:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("Insira a Cedula: "))
print("Entrada:",x)
if(x!=100)and(x!=50)and(x!=20)and(x!=10)and(x!=5)and(x!=2):
	y="Invalido"
elif(x==100):
	y="Garoupa"
elif(x==50):
	y="Onca-pintada"
elif(x==20):
	y="Mico-leao-dourado"
elif(x==10):
	y="Arara"
elif(x==5):
	y="Garca"
elif(x==2):
	y="Tartaruga"
print("Animal:",y)	

-- EXECUTION TIME:
0.215712
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
